# spark-nhs-prescription-analysis

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
conf/: log4j2.properties  spark-defaults.conf
notebooks/: 01_delta_lake_intro.ipynb
scripts/: spark_session.py
terraform/: main.tf  setup_terraform_remote_start.sh
