[project]
name = "new-folder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.0",
    "bs4>=0.0.2",
    "delta-spark>=4.2.0",
    "dotenv>=0.9.9",
    "playwright>=1.59.0",
    "pydotenv>=0.0.7",
    "pyspark>=4.1.1",
    "requests>=2.33.1",
]
